Separated formatResults into module and added reproduced functionality of lookup with knex

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/acdarroll/pg-connect#readme",
   "dependencies": {
+    "knex": "^0.14.2",
     "pg": "^7.4.0"
   }
 }
